--- a/links/package.json
+++ b/links/package.json
@@ -6,6 +6,7 @@
     "build": "npx tailwindcss -i ./input.css -o ./output.css --watch"
   },
   "dependencies": {
-    "flowbite": "^1.5.5"
+    "flowbite": "^1.5.5",
+    "izitoast": "^1.4.0"
   }
 }
